Ref auf github und copyright

--- a/typescript.html
+++ b/typescript.html
@@ -33,9 +33,8 @@
 			<div class="slides">
                 <section>
 					<h2>JavaScript in großen Projekten mit TypeScript</h2>
-                    <p>
-                        <a href="index.html?print-pdf" target="_blank">Druck-Version</a>
-                    </p>
+                    <p>Diese Folien auf GitHub: <a href="https://github.com/DJCordhose/typescript-hh-js">https://github.com/DJCordhose/typescript-hh-js</a></p>
+                    <footer>&copy; Oliver Zeigermann 2013, <a href="http://zeigermann.eu">http://zeigermann.eu</a></footer>
 				</section>
 
                 <section>
@@ -43,7 +42,7 @@
                     <ul>
                         <li class="fragment">Teil 1: Einführung (diese Folien)
                         <li class="fragment">Teil 2: <a target="_blank" href="http://www.typescriptlang.org/Playground/">Play auf typescriptlang.org</a>
-                        <li class="fragment">Teil 3: IDE-Support (WebStorm, evtl. Visual Studio)
+                        <li class="fragment">Teil 3: Live-Demo IDE-Support (WebStorm, evtl. Visual Studio)
 
                     </ul>
                 </section>
