--- a/typescript.html
+++ b/typescript.html
@@ -40,22 +40,18 @@
                 <section>
                     <h3>Concepts</h3>
                     <ul>
-                        <li class="fragment">Superset of ECMAScript 5
-                        <li class="fragment">Adds administrative concepts to JavaScript to allow for large scale development
-                        <li class="fragment">Compatible with ECMAScript 6 where applicable and possible
-                        <li class="fragment">By Microsoft, Anders Hjelsberg
+                        <li class="fragment">Valid JavaScript is also valid TypeScript
+                        <li class="fragment">Almost ECMAScript 6 with declared types
                         <li class="fragment">Introduces a compiler step
-                        <li class="fragment">Compiler written in TypeScript itself
-                        <li class="fragment">Compiler creates mapping file for native debugging in Browsers
                     </ul>
                 </section>
                 <section>
                     <h3>New Concepts of the Language</h3>
                     <ul>
-                        <li class="fragment">Declared Types
                         <li class="fragment">Classes
                         <li class="fragment">Inheritance
                         <li class="fragment">Modules
+                        <li class="fragment">Declared Types
                         <li class="fragment">Interfaces and external declarations
                     </ul>
                 </section>
